# EDAB2724_AnomalyDetection

./: .nojekyll  IsolationForest.html  IsolationForest.ipynb  IsolationForest.qmd  README.md  Tuned_Provided_Model.html  Tuned_Provided_Model.ipynb  ValeskaNotebook.qmd  Z_score_model.qmd  about.html  benchmarking.py  experimentation.qmd  index.html  listings.json  main.py  provided_model.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  z_score_classifier.html  z_score_classifier.qmd
Tuned_Provided_Model_files/libs/bootstrap/: bootstrap-d3ff60f736db98270af3c320d4ca77f9.min.css
docs/: about.qmd  index.qmd  z_score_classifier.html
docs/_site/: index.html  listings.json  search.json
docs/_site/posts/EDA/: index.html
docs/posts/EDA/: index.qmd  index.quarto_ipynb
docs/posts/ReadME/: index.qmd
docs/posts/benchmarking/: index.qmd  index.quarto_ipynb
docs/posts/isolation_forest/: index.qmd  index.quarto_ipynb
docs/posts/provided_model/: index.qmd  index.quarto_ipynb
docs/posts/z_score_model/: index.qmd
models/: _quarto.yml
models/_site/: index.html
models/posts/isolation_forest/: index.qmd
models/posts/z_score_model/: index.qmd
posts/EDA/: index.html
posts/ReadME/: index.html
posts/benchmarking/: index.html
posts/isolation_forest/: index.html
posts/provided_model/: index.html
posts/z_score_model/: index.html
site_libs/bootstrap/: bootstrap-650962646ede98a6f0d577bcd0196704.min.css  bootstrap-d9e9dc2699e41f23d49393a2a648ab6c.min.css
z_score_classifier_files/libs/bootstrap/: bootstrap-4a16c7565d5b5921b81f10edbd8f2e0f.min.css
(+28 files in other folders)
