[project]
name = "edab2724-anomalydetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adtk>=0.6.2",
    "great-tables>=0.18.0",
    "jupyter>=1.1.1",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "selenium>=4.36.0",
    "tqdm>=4.67.1",
]
